<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/text_view_title"
            style="@style/CategoryStyle"
            android:text="@string/habit_title" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_text_subtitle"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_subtitle"
                android:inputType="textCapWords" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/text_view_start_date"
            style="@style/CategoryStyle"
            android:text="@string/habit_start_date" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_date"
                style="@style/CategoryStyle"
                android:paddingLeft="10dp"
                android:text="@string/habit_date" />

        </LinearLayout>

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_quantity"
            style="@style/CategoryStyle"
            android:text="@string/habit_counter" />

        <!-- Input field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_text_counter"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="27dp"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:maxLines="1" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/habit_days"
                android:textAppearance="?android:textAppearanceSmall" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>